update navbar, context

--- a/stonemaker3/src/app/about/about.component.html
+++ b/stonemaker3/src/app/about/about.component.html
@@ -4,9 +4,9 @@
       <div class="container-fluid">
           <div class="jumbotron">
               <h2 class="display-5">Do Something Today, That Your Future-self Will Thank You for.</h2>
-              <p class="lead">I am a healthy kind human that enjoys Web and Ad Technologies, Snowboarding, and Ocean Beaches.  Past five years, I have been working in the SF Bay Area, snowboarding in Lake Tahoe, and taking adventures to Hawaii.          </p>
+              <p class="lead">I am a healthy kind human that enjoys Web and Ad Technologies, Snowboarding, and Ocean Beaches.  Past five years, I have been working in the SF Bay Area, snowboarding in Lake Tahoe, and taking adventures to Hawaii.              </p>
               <hr class="my-4">
-              <p>My 2018 goals entail implementing web/ad/360/video technologies for growing businesses and organizing outdoor adventures.    Also, spend my spare time serving local communities for a better retirement by redeveloping homes.   Here is my <a class="badge badge-primary" [routerLink]="['../contact']" role="button">Contact</a>.</p>
+              <p>My 2019 goals entail implementing web/ad/360/video technologies for growing businesses.   Also, spend my spare time serving local neighborhoods for a better retirement by redeveloping homes and going on outdoor adventures.       Also, spend my spare time serving local communities for a better retirement by redeveloping homes.   Here is my <a class="badge badge-primary" [routerLink]="['../contact']" role="button">Contact</a>.</p>
               
               <p>Investment in your health and the health of your loved one.  Give the gift of health, <a href="https://www.hackensackumc.org/donate/ways-to-give/" target="_blank">Hackensack Meridian Health.</a></p>
               <!-- <p class="lead">
