--- a/stonemaker3/src/app/contact/contact.component.html
+++ b/stonemaker3/src/app/contact/contact.component.html
@@ -6,22 +6,28 @@
       <h2 class="display-5">You Are Powerful, Because You Exist.</h2>
       <p class="lead">Thanks for your interest. I look forward to speaking with you.  Feel free to reach to me by email, text, voice.   </p>
       <hr class="my-4">
+      <div class="row align-items-start">
+      <div class="col-12 col-md-4 col-lg-12 "><img src="../../assets/photos/vcard-jungno-8733.png" class="rounded m-1" alt="qrcode vcard"></div>
+      <div class="col-6 col-md-4 col-lg-12"><a class="btn btn-primary btn-lg m-1" href="mailto:jungno@gmail.com" role="button">Email</a>
+        <a class="btn btn-primary btn-lg m-1" href="tel:201-500-8733" role="button">Voice Text</a></div>
+        </div>
       
-        <a class="btn btn-primary btn-lg m-1" href="mailto:jungno@gmail.com" role="button">Email</a>
-        <a class="btn btn-primary btn-lg m-1" href="tel:201-500-8733" role="button">Text & Voice</a>
+        
     </div>
 
     <div class="jumbotron">
             <h2 class="display-5">Difficult Roads Often Lead To Beautiful Destinations.</h2>
       <p class="lead">You need friends on powder days, join our group.</p>
       <hr class="my-4">
-      <table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse:collapse;"><tr style=""><td height="28" style="line-height:28px;">&nbsp;</td></tr><tr><td style=""><table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse:separate;background-color:#ffffff;border:1px solid #dddfe2;border-radius:3px;font-family:Helvetica, Arial, sans-serif;margin:0px auto;"><tr style="padding-bottom: 8px;"><td style=""><img class="img-fluid " src="../../assets/photos/hottub.jpg"  alt="" /></td></tr><tr><td style="font-size:14px;font-weight:bold;padding:8px 8px 0px 8px;text-align:center;">SHOTY</td></tr><tr><td style="color:#90949c;font-size:12px;font-weight:normal;text-align:center;">Closed group · 113 members</td></tr><tr><td style="padding:8px 12px 12px 12px;"><table border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;width:100%;"><tr><td style="background-color:#4267b2;border-radius:3px;text-align:center;"><a style="color:#3b5998;text-decoration:none;cursor:pointer;width:100%;" href="https://www.facebook.com/plugins/group/join/popup/?group_id=231433503956117&amp;source=email_campaign_plugin" target="_blank" rel="noopener"><table border="0" cellspacing="0" cellpadding="3" align="center" style="border-collapse:collapse;"><tr><td style="border-bottom:3px solid #4267b2;border-top:3px solid #4267b2;color:#FFF;font-family:Helvetica, Arial, sans-serif;font-size:12px;font-weight:bold;">Join Group</td></tr></table></a></td></tr></table></td></tr><tr><td style="border-top:1px solid #dddfe2;font-size:12px;padding:8px 12px;">SHOTY
-
-            We are a social club for snowboarders and skiers that ride Lake Tahoe and live in the San Franciso Bay Area extended to Sacramento.   As a grou...</td></tr></table></td></tr><tr style=""><td height="28" style="line-height:28px;">&nbsp;</td></tr></table>
+      <table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse:collapse;"><tr style=""><td height="28" style="line-height:28px;">&nbsp;</td></tr><tr><td style=""><table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse:separate;background-color:#ffffff;border:1px solid #dddfe2;border-radius:3px;font-family:Helvetica, Arial, sans-serif;margin:0px auto;"><tr style="padding-bottom: 8px;"><td style=""><img class="img-fluid " src="../../assets/photos/hottub.jpg"  alt="" /></td></tr><tr><td style="font-size:14px;font-weight:bold;padding:8px 8px 0px 8px;text-align:center;">SHOTY</td></tr><tr><td style="color:#90949c;font-size:12px;font-weight:normal;text-align:center;">Closed group · 113 members</td></tr><tr><td style="padding:8px 12px 12px 12px;"><table border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;width:100%;"><tr><td style="background-color:#4267b2;border-radius:3px;text-align:center;"><a style="color:#3b5998;text-decoration:none;cursor:pointer;width:100%;" href="https://www.facebook.com/plugins/group/join/popup/?group_id=231433503956117&amp;source=email_campaign_plugin" target="_blank" rel="noopener"><table border="0" cellspacing="0" cellpadding="3" align="center" style="border-collapse:collapse;"><tr><td style="border-bottom:3px solid #4267b2;border-top:3px solid #4267b2;color:#FFF;font-family:Helvetica, Arial, sans-serif;font-size:12px;font-weight:bold;">Join Group</td></tr></table></a></td></tr></table></td></tr><tr><td style="border-top:1px solid #dddfe2;font-size:12px;padding:8px 12px;">SHOTY            We are a social club for snowboarders and skiers that ride Lake Tahoe and live in the San Franciso Bay Area extended to Sacramento.   As a grou...</td></tr></table></td></tr><tr style=""><td height="28" style="line-height:28px;">&nbsp;</td></tr></table>
     </div>
+    
 
   </div>
   <p class="lead">
+    
     <a class="btn btn-primary btn-lg ml-2 mt-2" [routerLink]="['../about']" role="button">About</a>
   </p>
+  
+
 </div>
