--- a/stonemaker3/src/app/portfolio/portfolio.component.html
+++ b/stonemaker3/src/app/portfolio/portfolio.component.html
@@ -14,31 +14,6 @@
 <section>
   <!-- 1 -->
     <div class="jumbotron row">
-
-        <div class="col">
-            <div class="card">
-                <div class="embed-responsive embed-responsive-1by1">
-                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303633859" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                  </div>
-                <div class="card-body">
-                  <h5 class="card-title">I Light Homes</h5>
-                  <p class="card-text">Ilighthomes.com is Angular6 website powered by Firebase using Bootstrap4.  Design Templates by Creative-Tim.  </p>
-                  <a href="https://ilighthomes.com" target="_blank"class="btn btn-secondary">Go Website</a>  
-                </div>
-              </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <div class="embed-responsive embed-responsive-1by1">
-                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303620026" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                  </div>
-                <div class="card-body">
-                  <h5 class="card-title">Home Buyers Bid</h5>
-                  <p class="card-text">Homebuyersbid.com is Angular6 website powered by Firebase using Bootstrap4.   Design Templates by Creative-Tim.</p>
-                  <a href="https://homebuyers.bid" target="_blank"class="btn btn-secondary">Go Website</a>  
-                </div>
-              </div>
-        </div>
         <div class="col">
             <div class="card">
                 <div class="embed-responsive embed-responsive-1by1">
@@ -51,12 +26,50 @@
                 </div>
               </div>
         </div>
+        <div class="col">
+            <div class="card">
+                <div class="embed-responsive embed-responsive-1by1">
+                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303633859" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                  </div>
+                <div class="card-body">
+                  <h5 class="card-title">I Light Homes</h5>
+                  <p class="card-text">Ilighthomes.com is Angular6 website powered by Firebase using Bootstrap4.  Design Templates by Creative-Tim.  </p>
+                  <a href="https://ilighthomes.com" target="_blank"class="btn btn-secondary">Go Website</a>  
+                </div>
+              </div>
+        </div>
+        <!-- <div class="col">
+            <div class="card">
+                <div class="embed-responsive embed-responsive-1by1">
+                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303620026" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                  </div>
+                <div class="card-body">
+                  <h5 class="card-title">Home Buyers Bid</h5>
+                  <p class="card-text">Homebuyersbid.com is Angular6 website powered by Firebase using Bootstrap4.   Design Templates by Creative-Tim.</p>
+                  <a href="https://homebuyers.bid" target="_blank"class="btn btn-secondary">Go Website</a>  
+                </div>
+              </div>
+        </div> -->
+
 
         
      
       </div>
 <!-- 2 -->
 <div class="jumbotron row">
+
+    <div class="col">
+        <div class="card">
+            <div class="embed-responsive embed-responsive-1by1">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303631628" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              </div>
+            <div class="card-body">
+              <h5 class="card-title">Guitar Lesson Miami</h5>
+              <p class="card-text">Guitarlessonmiami.com is Angular6 website powered by Firebase using Bootstrap4.  Form powered by Firestore and has two integrations.  First, Email Marketing Platform by SendGrid.  Second, Customer Relation Management by Airtable. Design Templates by Creative-Tim.  </p>
+              <a href="https://guitarlessonmiami.com" target="_blank"class="btn btn-secondary">Go Website</a>  
+            </div>
+          </div>
+    </div>
 
 
     <div class="col">
@@ -73,23 +86,12 @@
           </div>
     </div>
 
-    <div class="col">
-        <div class="card">
-            <div class="embed-responsive embed-responsive-1by1">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303631628" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-              </div>
-            <div class="card-body">
-              <h5 class="card-title">Guitar Lesson Miami</h5>
-              <p class="card-text">Guitarlessonmiami.com is Angular6 website powered by Firebase using Bootstrap4.  Form powered by Firestore and has two integrations.  First, Email Marketing Platform by SendGrid.  Second, Customer Relation Management by Airtable. Design Templates by Creative-Tim.  </p>
-              <a href="https://guitarlessonmiami.com" target="_blank"class="btn btn-secondary">Go Website</a>  
-            </div>
-          </div>
-    </div>
+
 
 </div>
 <!-- 3 -->
 <div class="jumbotron row">
-    <div class="col">
+    <!-- <div class="col">
         <div class="card">
             <div class="embed-responsive embed-responsive-1by1">
                 <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303640870" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -100,7 +102,7 @@
               <a href="https://iamwenrock.com" target="_blank"class="btn btn-secondary">Go Website</a>  
             </div>
           </div>
-    </div>
+    </div> -->
 
     <div class="col">
         <div class="card">
