--- a/stonemaker3/src/app/app.component.html
+++ b/stonemaker3/src/app/app.component.html
@@ -6,9 +6,9 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <a class="navbar-brand mx-auto h3 order-0" [routerLink]="['./']">Jung No </a>
+  <a class="navbar-brand h3 order-0" [routerLink]="['./']">Jung No </a>
 
-  <a class="btn btn-primary ml-2 order-4 " [routerLink]="['./contact']" >Contact</a>
+  <!-- <a class="btn btn-primary ml-2 order-4 " [routerLink]="['./contact']" >Contact</a> -->
   
 
   <div id="navbarSupportedContent order-2" [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}">
@@ -18,7 +18,7 @@
       <a class="nav-item nav-link mx-auto" [routerLink]="['./about']" (click)="toggleCollapsed()" >About</a>
       <a class="nav-item nav-link mx-auto" [routerLink]="['./resume']"(click)="toggleCollapsed()" >Resume</a>
       <a class="nav-item nav-link mx-auto" [routerLink]="['./portfolio']" (click)="toggleCollapsed()">Portfolio</a>
-      <!-- <a class="nav-item nav-link mx-auto" [routerLink]="['./contact']" (click)="toggleCollapsed()" >Contact</a> -->
+      <a class="nav-item nav-link mx-auto" [routerLink]="['./contact']" (click)="toggleCollapsed()" >Contact</a>
     </div>
   </div>
 </nav>
